Added the README files

--- a/notebooks/StatisticalModeling.ipynb
+++ b/notebooks/StatisticalModeling.ipynb
@@ -39223,7 +39223,6 @@
     "import lime\n",
     "import lime.lime_tabular\n",
     "\n",
-    "# Assuming model_xgb is already trained and X_test is your test set\n",
     "\n",
     "# Initialize the LIME explainer\n",
     "explainer = lime.lime_tabular.LimeTabularExplainer(\n",
@@ -39233,7 +39232,7 @@
     ")\n",
     "\n",
     "# Choosing a sample from X_test to explain\n",
-    "i = 0  # Index of the sample you want to explain\n",
+    "i = 0  # Index of the sample we want to explain\n",
     "sample = X_test.iloc[i]\n",
     "\n",
     "# Explaining the prediction for the selected sample\n",
