made some minimal changes

--- a/notebooks/StatisticalModeling.ipynb
+++ b/notebooks/StatisticalModeling.ipynb
@@ -9,10 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#this is the global package declarations\n",
     "import pandas as pd\n",
     "import sys\n",
     "import os\n",
